--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             const img = document.createElement('img');
             img.className = 'cat-image';
             img.src = imageUrl;
-            img.alt = 'Adorable cat';
+            img.alt = 'car';
             
             img.loading = 'lazy';
             
